See http://netpbm.sourceforge.net/history.html for a general history of
Netpbm.

CHANGE HISTORY 
--------------

not yet  BJH  Release 10.99.00

              pnmgamma -srgbtobt709, -bt709tosrgb: fix bug; incorrect output.
              Always broken (These options were new in Netpbm 10.32 (February
              2006)).

              pamdice: Fix incorrect output file name with PAM input.  Always
              broken (pamdice was new in Netpbm 9.25 (March 2002).

              libnetpbm: Stop bogus runtime error check failure in pmfileio.c
              shifts.

22.03.27 BJH  Release 10.98.00

              pamtopdbimg: Add -fixedtime.

              ppmfade: Use temporary files securely.
              
              pnmtosir: Set some possibly meaningless bits in output to zero
              so output is repeatable.

              pamx: Fix bug: top-justifies image in all cases where it should
              bottom-justify.  Always broken.  (pamx was new in Netpbm 10.34
              (June 2006).

              pnmtorle: Fix bug: -h works only on first image.

              pamsistoaglyph: Fix invalid memory reference and incorrect
              output on depth 1 input.  Always broken.  (pamsistoaglyph was
              new in Netpbm 10.47 (June 2009).  Thanks Scott Pakin.

              pambayer: Fix bogus colors at edges.  Always Broken (pambayer
              was new in Release 10.30 (October 2005)).

              libnetpbm, various programs: fix bug: bogus warning that a color
              specified on command line cannot be represented exactly with the
              maxval being used.  Introduced in Netpbm 10.83 (June 2018).

              pnmtopsnr: Fix typo in error message.  Always broken (pnmpsnr
              was new in Netpbm 9.6 (July 2000).

              ppmtoilbm: Remove -floyd (aka -fs) option, which hasn't worked
              in a long time if ever and is inappropriate function for this