@@ -6,9 +6,14 @@ CHANGE HISTORY
 
 not yet  BJH  Release 10.99.00
 
+              palmtopnm: Fix failure with bogus claim of invalid input on
+              architectures that do not use two's complement negative numbers.
+              Always broken.  (Ability to convert PackBits input was new in
+              Netpbm 10.27 (March 2005).
+
               pnmgamma -srgbtobt709, -bt709tosrgb: fix bug; incorrect output.
               Always broken (These options were new in Netpbm 10.32 (February
-              2006)).
+              2006)).  Thanks Alexander Shpilkin <ashpilkin@gmail.com>.
 
               pamdice: Fix incorrect output file name with PAM input.  Always
               broken (pamdice was new in Netpbm 9.25 (March 2002).
